[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Margin"]
margin_left = 32.0
margin_top = 32.0
margin_right = 644.0
margin_bottom = 202.0
size_flags_vertical = 0
custom_constants/separation = 32

[node name="Title" type="Label" parent="Margin/VBoxContainer"]
margin_right = 612.0
margin_bottom = 14.0
text = "Godot Game"
align = 1
valign = 1

[node name="ButtonTimeAttack" type="Button" parent="Margin/VBoxContainer"]
margin_top = 46.0
margin_right = 612.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Play Time Attack"

[node name="ButtonHighScore" type="Button" parent="Margin/VBoxContainer"]
margin_top = 98.0
margin_right = 612.0
margin_bottom = 118.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Play High Score"

[node name="ButtonQuit" type="Button" parent="Margin/VBoxContainer"]
margin_top = 150.0
margin_right = 612.0
margin_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Quit"

[connection signal="pressed" from="Margin/VBoxContainer/ButtonTimeAttack" to="." method="_on_button_play_time_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/ButtonHighScore" to="." method="_on_button_play_score_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
